--- a/README
+++ b/README
@@ -1,5 +1,6 @@
 Computational Intelligence for the Humanities
-2/19/2025
+Repository created: 2/19/2025
+Class taken: Spring 2025
 
 This is a repository of all my code from my Computational Intelligence class.
 Most of this will be tokenization, language modeling, and other humanities-related research.
